--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -33,6 +33,9 @@ html, body {
 
 	overflow-x: hidden;
 	overflow-y: scroll;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 	
 	&::-webkit-scrollbar {
 		display: none;
