--- a/frontend/src/app/album-page/components/album-page/album-page.component.html
+++ b/frontend/src/app/album-page/components/album-page/album-page.component.html
@@ -1,4 +1,4 @@
-<div class="song-page" [ngStyle]="{'background-color': this.color}" > 
+<div class="song-page"> 
 
 	<div class="song-header">
 		<div class="cover">
