Feat: Implemented lazy loading bof bof

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
         <span class="tooltiptext">Home</span>
     </div> 
     <div class="tooltip">
-        <img routerLink="/home" src="../../assets/search-icon.svg" alt="Search"> 
+        <img routerLink="/search" src="../../assets/search-icon.svg" alt="Search"> 
         <span class="tooltiptext">Search</span>
     </div> 
 </div>
