--- a/frontend/src/app/utility/components/song/song.component.scss
+++ b/frontend/src/app/utility/components/song/song.component.scss
@@ -71,7 +71,10 @@
             cursor: pointer;
 
             img {
-                transform: translate(-10px, 5px);
+                aspect-ratio: 1/1;
+                height: 5vh;
+                width: auto;
+                transform: translate(-25%, 25%);
             }
         }
     }
