fixed home page routing !!!

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar-container">
     <div class="tooltip">
-        <img routerLink="/home" src="../../assets/home-icon.svg" alt="Home"> 
+        <img routerLink="" src="../../assets/home-icon.svg" alt="Home"> 
         <span class="tooltiptext">Home</span>
     </div> 
     <div class="tooltip">
