Feat: Started search page implementation

--- a/frontend/src/app/search-page/components/search-page/search-page.component.html
+++ b/frontend/src/app/search-page/components/search-page/search-page.component.html
@@ -1,1 +1,5 @@
-<p>search-page works!</p>
+<div class="search-page">
+    <div class="search-zone">
+        <app-search-bar class="search-bar"></app-search-bar>
+    </div>
+</div>
