--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,6 @@
 <div class="navbar-container">
-    <div class="tooltip">
+    <div class="icons">
         <img routerLink="" src="../../assets/home-icon.svg" alt="Home"> 
-        <span class="tooltiptext">Home</span>
-    </div> 
-    <div class="tooltip">
         <img routerLink="/search" src="../../assets/search-icon.svg" alt="Search"> 
-        <span class="tooltiptext">Search</span>
-    </div> 
+    </div>
 </div>
