--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -16,70 +16,38 @@
     padding: 10px;
     gap: 10px;
 
+    .icons {
 
-    .tooltip {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        cursor: pointer;
-        margin: 15px 0;
         width: 100%;
-
-        .tooltiptext {
-            visibility: hidden;
-            opacity: 0;
-            width: 120px;
-            background-color: grey;
-            color: #fff;
-            text-align: center;
-            border-radius: 6px;
-            padding: 5px 0;
-
-            position: absolute;
-            z-index: 1;
-            left: 100%;
-
-            transition: opacity 0.5s ease-in-out;
-
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        }
-
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
         img {
-            width: 60%;
+            aspect-ratio: 1/1;
+            height: 4vh;
             filter: invert(80%);
-        }
 
-        &:hover {
-    
-            img {
+                
+            &:hover {
                 filter: invert(100%);
-            }
-    
-            .tooltiptext {
-                visibility: visible;
-                opacity: 1;
-            }
-        }
+            } 
+        }   
     }
+
 }
 
 @media only screen and (max-width: 800px) {
     .navbar-container {
-
         flex-direction: row;
         width: 100%;
         height: 100%;
-    justify-content: space-around;
+        justify-content: space-around;
 
-        .tooltip {
-            height: 100%;
-            align-items: center;
-            margin: 0;
-            margin-right: 10px;
-            img {
-                height: 80%;
-                width: auto;
-            }
-        } 
+        .icons {
+            flex-direction: row;
+            justify-content: space-around;
+        }
     }
 }
