homepage now well structured, artist component created

--- a/frontend/src/app/home-page/home-page/home-page.component.html
+++ b/frontend/src/app/home-page/home-page/home-page.component.html
@@ -1,26 +1,26 @@
 <div id="home-page">
-	<div id="popular-songs">
+	<div id="popular-songs" class="home-page-section">
 		<div class="title">
 			<h2>Popular Songs</h2>
 		</div>
-		<div *ngFor="let song of popularSongs; let index = index">
-			<app-song [song]="song" [index]="index+1"></app-song>
+		<div>
+			<app-song *ngFor="let song of popularSongs; let index = index" [song]="song" [index]="index+1"></app-song>
 		</div>
 	</div>
-	<div id="popular-albums">
+	<div id="popular-albums" class="home-page-section">
 		<div class="title">
 			<h2>Popular Albums</h2>
 		</div>
-        <div *ngFor="let album of popularAlbums">
-            <app-album [album]="album"></app-album>
+        <div id="popular-albums-content">
+            <app-album *ngFor="let album of popularAlbums" [album]="album"></app-album>
         </div>
 	</div>
-	<div id="popular-artists">
+	<div id="popular-artists" class="home-page-section">
 		<div class="title">
 			<h2>Popular Artists</h2>
 		</div>
-		<div *ngFor="let artist of popularArtists" style="height: 50px; color: gray">
-			{{artist.username}}
+		<div id="popular-artists-content">
+			<app-artist *ngFor="let artist of popularArtists" [artist]="artist"></app-artist>
 		</div>		
 	</div>
 </div>
