--- a/frontend/src/app/home-page/home-page/home-page.component.scss
+++ b/frontend/src/app/home-page/home-page/home-page.component.scss
@@ -1,13 +1,33 @@
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
-
 #home-page {
 	margin: 0;
 	padding: 0;
-	background-color: #222;
+	background-color: #181818;
 	color: white;
 	box-sizing: border-box;
+
+	.home-page-section {
+		// put the box shadow at the top inside the div
+		box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.75);
+
+	}
+
+	.title {
+		padding: 10px;
+		font-size: 25px;
+		margin-left: 50px;
+	}
+
+	#popular-albums, #popular-artists {
+		width: 100%;
+
+		#popular-albums-content, #popular-artists-content {
+			overflow-x: auto;
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			margin: 0 50px;
+		}
+
+	}
+
 }
