--- a/frontend/src/app/utility/components/album/album.component.scss
+++ b/frontend/src/app/utility/components/album/album.component.scss
@@ -19,11 +19,10 @@ a {
     display: flex;
     flex-direction: column;
     gap: 20px;
-
     padding: 10px;
     background-color: #181818;
-
     border-radius: 7px;
+    width: 240px;
 
     transition: background-color 0.1s ease-in-out;
     .img-zone {
@@ -41,11 +40,15 @@ a {
     .album-infos {
         display: flex;
         flex-direction: column;
-        padding-left: 10px;
+        padding: 10px;
+
         .title {
+            display: block;
+            text-overflow: ellipsis;
             font-weight: bold;
             color: white;
-            white-space:nowrap;
+            white-space: nowrap;
+            overflow: hidden;
         }
 
         .date {
