--- a/frontend/src/app/utility/components/song/song.component.scss
+++ b/frontend/src/app/utility/components/song/song.component.scss
@@ -1,6 +1,6 @@
 .track-details {
     /*Temp solution to width issue*/
-    height: 7vh;
+    min-height: 7vh;
 
     display: grid;
     grid-template-columns: 1fr 1fr 4fr 1fr;
@@ -60,7 +60,7 @@
         }
 
         .play {
-
+            height: 100%;
             visibility: hidden;
 
             position: absolute;
@@ -72,7 +72,7 @@
 
             img {
                 aspect-ratio: 1/1;
-                height: 5vh;
+                height: 70%;
                 width: auto;
                 transform: translate(-25%, 25%);
             }
