--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -53,8 +53,8 @@ html, body {
 
 .arrows-nav {
 	position: fixed;
-	left: calc(5vw + 20px);
-	top: 20px;
+	left: 5vw;
+	top: 0;
 }
 
 @media screen and (max-width: 800px) {
