--- a/frontend/src/app/components/arrows-nav/arrows-nav.component.scss
+++ b/frontend/src/app/components/arrows-nav/arrows-nav.component.scss
@@ -4,16 +4,18 @@
 
     height: 4vh;
     gap: 5px;
+    padding: 5px;
+    width: 10vw;
+    background: linear-gradient(to right, #000000 0%, #000000 40%, rgba(0,0,0,0) 90%);
+
 
     button {
         //Remove default style from buttons
         border: none;
-        
         background: rgba($color: #000000, $alpha: 0.5);
-
         border-radius: 50%;
-
         aspect-ratio: 1/1;
+        cursor: pointer;
 
         img {
             height: 70%;
