--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -13,7 +13,7 @@
     background-color: #111;
     height: 100%;
     width: 100%;
-    padding: 10px;
+    padding: 30px 10px 10px 10px;
     gap: 10px;
 
     .icons {
@@ -22,14 +22,13 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: 50px;
         align-items: center;
         img {
             aspect-ratio: 1/1;
-            height: 4vh;
+            width: 70%;
             filter: invert(80%);
 
-                
             &:hover {
                 filter: invert(100%);
             } 
@@ -48,6 +47,10 @@
         .icons {
             flex-direction: row;
             justify-content: space-around;
+
+            img {
+                height: 70%;
+            }
         }
     }
 }
