--- a/frontend/src/app/player/queue/queue.component.scss
+++ b/frontend/src/app/player/queue/queue.component.scss
@@ -1,32 +1,35 @@
 #queue-container {
 	overflow-y: scroll;
 	background-color: #222;
-
+	position: relative;
 	#queue-title {
+		position: sticky;
+		top: 0;
+		z-index: 1;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		background-color: #222;
+		padding: 10px;
 
 		h2 {
 			padding-left: 15px;
-			letter-spacing: .5px;
+			letter-spacing: 0.5px;
 		}
-
+		
 		img {
 			margin-right: 15px;
 			height: 30px;
 			cursor: pointer;
 			filter: invert(80%);
-
+		
 			&:hover {
 				filter: invert(100%);
 			}
 		}
-
 	}
 
 	#queue-songs {
-
 		.queue-element {
 			height: 70px;
 			display: flex;
