--- a/frontend/src/app/home-page/home-page/home-page.component.scss
+++ b/frontend/src/app/home-page/home-page/home-page.component.scss
@@ -10,4 +10,17 @@
 	background-color: #222;
 	color: white;
 	box-sizing: border-box;
+
+	#popular-albums {
+		display: flex;
+		flex-direction: column;
+		padding: 10px;
+		gap: 10px;
+		
+		.popular-album-list {
+			display: flex;
+			flex-direction: row;
+			gap: 10px;
+		}
+	}
 }
