--- a/frontend/src/app/search-page/components/search-page/search-page.component.html
+++ b/frontend/src/app/search-page/components/search-page/search-page.component.html
@@ -1,5 +1,21 @@
 <div class="search-page">
     <div class="search-zone">
-        <app-search-bar class="search-bar"></app-search-bar>
+        <app-search-bar (searchEvent)="displaySearch($event)" class="search-bar"></app-search-bar>
+        <div class="list-flair">
+            <div class="flair">
+                <p>Song</p>
+            </div>
+            <div class="flair">
+                <p>Artist</p>
+            </div>
+            <div class="flair">
+                <p>Album</p>
+            </div>
+        </div>
+    </div>
+    <div class="songs-list">
+		<div *ngFor="let song of songsSearchResults; let index = index">
+            <app-song [song]="song" [index]="index"></app-song>
+		</div>		
     </div>
 </div>
