--- a/frontend/src/app/search-page/components/search-page/search-page.component.scss
+++ b/frontend/src/app/search-page/components/search-page/search-page.component.scss
@@ -11,6 +11,8 @@
 
     padding-top: 10vh;
 
+    gap: 10px;
+
     .search-zone {
         display: flex;
         flex-direction: column;
@@ -18,9 +20,44 @@
         align-items: center;    
         width: 100%;
 
+        gap: 10px;
+
         .search-bar {
             width: 80%;
         }
+
+        .list-flair{
+            display: flex;
+            flex-direction: row;
+            justify-content: left;
+            gap: 10px;
+
+            .flair {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 5px 10px;
+                border-radius: 5px;
+                background-color: #333;
+                color: #fff;
+                font-size: 1.2rem;
+                cursor: pointer;
+                transition: all 0.2s ease-in-out;
+
+                &:hover {
+                    background-color: #444;
+                }
+
+                &.active {
+                    background-color: #444;
+                }
+            }
+        }
+    }
+    .songs-list {
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
     }
 }
 
