--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -24,6 +24,8 @@
         flex-direction: column;
         gap: 50px;
         align-items: center;
+        cursor: pointer;
+
         img {
             aspect-ratio: 1/1;
             width: 70%;
