--- a/frontend/src/app/search-page/components/search-page/search-page.component.scss
+++ b/frontend/src/app/search-page/components/search-page/search-page.component.scss
@@ -59,6 +59,12 @@
         flex-direction: column;
         padding: 10px;
     }
+
+    .artists-list, .albums-list {
+        display: flex;
+        flex-direction: row;
+        padding: 10px;        
+    }
 }
 
 
