--- a/frontend/src/app/player/player/player.component.scss
+++ b/frontend/src/app/player/player/player.component.scss
@@ -14,7 +14,7 @@ $player_height: 12vh;
 	background-color: $bg_color;
 	color: white;
 	padding: 0 10px;
-	width: 100%;
+	width: 100vw;
 	box-sizing: border-box;
 	align-items: center;
 
