--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -35,6 +35,7 @@ html, body {
 
 	overflow-x: hidden;
 	overflow-y: scroll;
+	padding-top: 4vh;
 	
 	box-sizing: border-box;
 	margin: 0;
@@ -66,5 +67,13 @@ html, body {
 			"main"
 			"player"
 			"navbar";
+	}
+
+	.main {
+		padding-top: 6vh;
+	}
+
+	.arrows-nav {
+		left: 0;
 	}
 }
