--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -44,6 +44,7 @@
         flex-direction: row;
         width: 100%;
         height: 100%;
+        padding: 10px;
         justify-content: space-around;
 
         .icons {
@@ -51,7 +52,7 @@
             justify-content: space-around;
 
             img {
-                height: 70%;
+                height: 80%;
             }
         }
     }
