Feat: Changed style of homepage

--- a/frontend/src/app/player/queue/queue.component.scss
+++ b/frontend/src/app/player/queue/queue.component.scss
@@ -1,6 +1,7 @@
 #queue-container {
 	background-color: #222;
 	position: relative;
+	overflow-y: scroll;
 	#queue-title {
 		position: sticky;
 		top: 0;
