--- a/frontend/src/app/home-page/home-page/home-page.component.scss
+++ b/frontend/src/app/home-page/home-page/home-page.component.scss
@@ -1,7 +1,8 @@
 #home-page {
 	margin: 0;
-	padding: 0;
-	background-color: #181818;
+	padding: 10px;
+	padding-top: 10vh;
+	background-color: #1C1C1C;
 	color: white;
 	box-sizing: border-box;
 
@@ -12,7 +13,6 @@
 	.title {
 		padding: 10px;
 		font-size: 25px;
-		margin-left: 50px;
 	}
 
 	#popular-albums, #popular-artists {
@@ -23,7 +23,6 @@
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
-			margin: 0 50px;
 		}
 
 	}
