--- a/frontend/src/app/song-page/components/song-page/song-page.component.scss
+++ b/frontend/src/app/song-page/components/song-page/song-page.component.scss
@@ -132,3 +132,11 @@
         }
     }
 }
+
+@media only screen and (max-width: 800px) {
+    .song-page {
+        .song-header {
+            padding-top: 7vh;
+        }
+    }
+}
