--- a/frontend/src/app/search-page/components/search-page/search-page.component.html
+++ b/frontend/src/app/search-page/components/search-page/search-page.component.html
@@ -2,23 +2,36 @@
     <div class="search-zone">
         <app-search-bar (searchEvent)="displaySearch($event)" class="search-bar"></app-search-bar>
         <div class="list-flair">
-            <div class="flair" (click)="changeSearchType('all')">
+            <div class="flair" [ngClass]="searchType == 'all' ? 'selected-flair' : ''" (click)="changeSearchType('all')">
                 <p>All</p>
             </div>
-            <div class="flair" (click)="changeSearchType('songs')">
+            <div class="flair" [ngClass]="searchType == 'songs' ? 'selected-flair' : ''" (click)="changeSearchType('songs')">
                 <p>Songs</p>
             </div>
-            <div class="flair" (click)="changeSearchType('artists')">
+            <div class="flair" [ngClass]="searchType == 'artists' ? 'selected-flair' : ''" (click)="changeSearchType('artists')">
                 <p>Artists</p>
             </div>
-            <div class="flair" (click)="changeSearchType('albums')">
+            <div class="flair" [ngClass]="searchType == 'albums' ? 'selected-flair' : ''" (click)="changeSearchType('albums')">
                 <p>Albums</p>
             </div>
         </div>
     </div>
-    <div class="songs-list">
-		<div *ngFor="let song of songsSearchResults; let index = index">
-            <app-song [song]="song" [index]="index"></app-song>
-		</div>		
+    <div class="songs-list" *ngIf="(searchType === 'all' || searchType === 'songs') && artistsSearchResults.length > 0">
+        <h2 class="section-title">Songs</h2>
+        <div class="search-results">
+            <app-song *ngFor="let song of songsSearchResults; let index = index" [song]="song" [index]="index + 1"></app-song>
+        </div>
+    </div>
+    <div class="albums-list" *ngIf="(searchType === 'all' || searchType === 'albums') && artistsSearchResults.length > 0">
+        <h2 class="section-title">Albums</h2>
+        <div class="search-results">
+            <app-album *ngFor="let album of albumsSearchResults; let index = index" [album]="album"></app-album>
+        </div>
+    </div>
+    <div class="artists-list" *ngIf="(searchType === 'all' || searchType === 'artists') && artistsSearchResults.length > 0">
+        <h2 class="section-title">Artists</h2>
+        <div class="search-results">
+            <app-artist *ngFor="let artist of artistsSearchResults; let index = index" [artist]="artist"></app-artist>
+        </div>
     </div>
 </div>
