--- a/frontend/src/app/search-page/components/search-page/search-page.component.scss
+++ b/frontend/src/app/search-page/components/search-page/search-page.component.scss
@@ -2,10 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: white;
 }
 
 .search-page {
-    background-color: #282828;
+    // background-color: #282828;
+    overflow-y: auto;
+
     height: 100%;
     width: 100%;
 
@@ -51,19 +54,34 @@
                 &.active {
                     background-color: #444;
                 }
+
+                &.selected-flair {
+                    background-color: #BBB;
+                    p {
+                        color: black;
+                    }
+                }
             }
         }
     }
-    .songs-list {
+    .songs-list .search-results {
         display: flex;
         flex-direction: column;
         padding: 10px;
     }
 
-    .artists-list, .albums-list {
+    .artists-list .search-results, .albums-list .search-results {
         display: flex;
         flex-direction: row;
-        padding: 10px;        
+        padding: 10px;
+        justify-content: space-between;
+        overflow-x: auto;
+    }
+
+    .section-title {
+        font-size: 1.5rem;
+        font-weight: bold;
+        padding: 10px;
     }
 }
 
