--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <div class="navbar-container">
     <div class="icons">
         <img routerLink="" src="../../assets/home-icon.svg" alt="Home"> 
-        <img routerLink="/search" src="../../assets/search-icon.svg" alt="Search"> 
+        <img routerLink="/search" src="../../assets/search-icon.svg" alt="Search">
+        <img routerLink="/login" src="../../assets/user-icon.svg" alt="User">
     </div>
 </div>
