Feat: Added context menu to song card components

--- a/frontend/src/app/utility/components/song/song.component.html
+++ b/frontend/src/app/utility/components/song/song.component.html
@@ -16,4 +16,9 @@
 	<div class="listened">
 		<p>{{song.duration | nicetime}}</p>
 	</div>
+	<div class="more">
+		<button (click)="showContextMenu()">
+			<img src="../../assets/more-icon.svg" alt="More">
+		</button>
+	</div>
 </div>
