--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,3 +11,6 @@
   <!--Player component-->
   <app-player #player class="player"></app-player>
 </div>
+
+<!--Context menu component-->
+<app-context-menu></app-context-menu>
