--- a/frontend/src/app/utility/components/song/song.component.html
+++ b/frontend/src/app/utility/components/song/song.component.html
@@ -1,4 +1,4 @@
-<div class="track-details">
+<div class="track-details" (contextmenu)="showContextMenuOnRightClick($event)">
 	<div class="play-or-index">
 		<div class="index">
 			<p>{{index}}</p>
