--- a/frontend/src/app/utility/components/context-menu/context-menu.component.scss
+++ b/frontend/src/app/utility/components/context-menu/context-menu.component.scss
@@ -3,6 +3,9 @@
     width: 200px;
     border: 1px solid black;
     background-color: #333;
+
+    border-radius: 5px;
+    padding: 5px;
     top: 0;
     left: 0;
     z-index: 1000;
@@ -10,6 +13,11 @@
     display: flex;
     flex-direction: column;
     justify-content: left;
+
+    /* add drop shadow */
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
+
+
     
     visibility: visible;
 
