Feat: responsive style for contextmenu

--- a/frontend/src/app/utility/components/context-menu/context-menu.component.html
+++ b/frontend/src/app/utility/components/context-menu/context-menu.component.html
@@ -1,4 +1,4 @@
-<div class="context-menu" [style.left.px]="left" [style.top.px]="top" [ngClass]="show ? '' : 'hidden'">
+<div class="context-menu" [style.--positionX.px]="left" [style.--positionY.px]="top" [style.--number-actions]="numberActions" [ngClass]="show ? '' : 'hidden'">
     <!--If the context menu is called from a song card component-->
     <button *ngIf="obj.song != undefined" class="action-menu" (click)="addSongToQueue()">Add song to queue</button>
     <button *ngIf="obj.song != undefined" class="action-menu" (click)="shareSong()">Share</button>
