--- a/frontend/src/app/utility/components/context-menu/context-menu.component.scss
+++ b/frontend/src/app/utility/components/context-menu/context-menu.component.scss
@@ -1,4 +1,10 @@
+
+
 .context-menu {
+    --number-actions: 0;
+    --positionX: 0;
+    --positionY: 0;
+
     position: absolute;
     width: 200px;
     border: 1px solid black;
@@ -6,8 +12,11 @@
 
     border-radius: 5px;
     padding: 5px;
-    top: 0;
-    left: 0;
+    top: var(--positionY);
+    left: var(--positionX);
+    bottom: auto;
+    right: auto;
+
     z-index: 1000;
 
     display: flex;
@@ -17,8 +26,6 @@
     /* add drop shadow */
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
 
-
-    
     visibility: visible;
 
     .action-menu {
@@ -30,11 +37,20 @@
 
         &:hover {
             background-color: #444;
-        }
-        
+        }  
     }
 }
 
 .context-menu.hidden {
     visibility: hidden;
+}
+
+@media screen and (max-width: 800px) {
+    .context-menu {
+        width: 100%;
+        bottom: calc(13vh + var(--number-actions) * 6vh);
+        top:auto;
+
+        left: 0;
+    }
 }
