--- a/frontend/src/app/login-page/components/login-page/login-page.component.scss
+++ b/frontend/src/app/login-page/components/login-page/login-page.component.scss
@@ -29,6 +29,7 @@
         gap: 20px;
 
         button {
+            cursor: pointer;
             padding: 10px;
             border: none;
             background: transparent;
