--- a/frontend/src/app/artist-page/components/artist-page/artist-page.component.html
+++ b/frontend/src/app/artist-page/components/artist-page/artist-page.component.html
@@ -5,7 +5,7 @@
         <img class="back" [src]="artist.profilePic"> 
     </div>
     <div class="more">
-
+        <button (click)="logout()">Logout</button>
         <div class="section">
             <div>
                 <h2>Popular</h2>
