--- a/frontend/src/app/artist-page/components/artist-page/artist-page.component.html
+++ b/frontend/src/app/artist-page/components/artist-page/artist-page.component.html
@@ -23,18 +23,14 @@
         <div class="section">
             <h2>Discographie</h2>
             <div class="list-style1">
-                <div *ngFor="let album of artistAlbums">
-                    <app-album [album]="album"></app-album>
-                </div>
+                <app-album *ngFor="let album of artistAlbums" [album]="album"></app-album>
             </div>
         </div>
 
         <div class="section">
             <h2>Similar</h2>
             <div class="list-style1">
-                <div *ngFor="let album of artistAlbums">
-                    <app-album [album]="album"></app-album>
-                </div>
+                <app-album *ngFor="let album of artistAlbums" [album]="album"></app-album>
             </div>
         </div>
         
