--- a/frontend/src/app/artist-page/components/artist-page/artist-page.component.scss
+++ b/frontend/src/app/artist-page/components/artist-page/artist-page.component.scss
@@ -32,7 +32,7 @@
         }
     }
     .list-style1 {
-    
+        overflow-x: auto;
         display: flex;
         flex-direction: row;
         gap: 10px;
