--- a/frontend/src/app/artist-page/components/artist-page/artist-page.component.html
+++ b/frontend/src/app/artist-page/components/artist-page/artist-page.component.html
@@ -1,11 +1,10 @@
 <div class="artist-page">
     <div class="artist-infos">
         <h1 id="artist-name">{{artist.username}}</h1>
-        <p id="monthly-audience">108 837 113 auditeurs mensuels</p>
         <img class="back" [src]="artist.profilePic"> 
     </div>
     <div class="more">
-        <button (click)="logout()">Logout</button>
+        <button (click)="logout()" *ngIf="authService.currentUserID == artist.id">Logout</button>
         <div class="section">
             <div>
                 <h2>Popular</h2>
