--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -14,3 +14,6 @@
 
 <!--Context menu component-->
 <app-context-menu></app-context-menu>
+
+<!--Pop up component-->
+<app-pop-up #popUp class="pop-up"></app-pop-up>
