--- a/frontend/src/app/login-page/components/login-page/login-page.component.html
+++ b/frontend/src/app/login-page/components/login-page/login-page.component.html
@@ -9,8 +9,9 @@
     
     <form [formGroup]="loginForm" (ngSubmit)="login()">
         <input type="text" id="name" placeholder="Username" formControlName="username">
+        <input *ngIf="action == 'register'" type="email" id="email" placeholder="Email adress" formControlName="email">
         <input type="password" id="password" placeholder="Password" formControlName="password">
-        <input *ngIf="action == 'register'" type="password" id="confirm-password" placeholder="Confirm password" formControlName="confirm-password">
+        <input *ngIf="action == 'register'" type="password" id="confirm-password" placeholder="Confirm password" formControlName="confirmPassword">
         <button class="btn btn-primary">Go on</button>
     </form>
 </div>
