--- a/frontend/src/app/search-page/components/search-page/search-page.component.scss
+++ b/frontend/src/app/search-page/components/search-page/search-page.component.scss
@@ -74,7 +74,7 @@
         display: flex;
         flex-direction: row;
         padding: 10px;
-        justify-content: space-between;
+        justify-content: left;
         overflow-x: auto;
     }
 
