--- a/frontend/src/app/utility/components/pop-up/pop-up.component.html
+++ b/frontend/src/app/utility/components/pop-up/pop-up.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="visible" class="pop-up">
+<div *ngIf="visible" class="pop-up" [style.--popup-color]="color">
     <span class="pop-up-text">{{message}}</span>
 </div>
