--- a/frontend/src/app/utility/components/pop-up/pop-up.component.scss
+++ b/frontend/src/app/utility/components/pop-up/pop-up.component.scss
@@ -1,4 +1,7 @@
 .pop-up {
+
+    --popup-color: #333;
+
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -15,7 +18,7 @@
     transform: translateX(-50%);
 
     padding: 10px;
-    background-color: #333;
+    background-color: var(--popup-color);
     border-radius: 5px;
 
     transition: opacity 0.5s ease-in-out;
