--- a/frontend/src/app/utility/components/song/song.component.scss
+++ b/frontend/src/app/utility/components/song/song.component.scss
@@ -3,7 +3,7 @@
     min-height: 7vh;
 
     display: grid;
-    grid-template-columns: 1fr 1fr 4fr 1fr 0.5fr;
+    grid-template-columns: .5fr .5fr 6fr .5fr 0.5fr;
     grid-template-rows: 1fr;
 
     flex-direction: row;
@@ -86,27 +86,34 @@
 
     
     .cover {
-        width: 5%;
         height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+
+        img {
+            aspect-ratio: 1/1;
+            height: 100%;
+        }
     }
     
     .title {
-        width: 40%;
+        width: 100%;
         height: 100%;
         display: flex;
         justify-content: left;
         align-items: center;
+        background: red;
 
         font-size: 1.2rem;
-        max-width: 30vh;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     
     
     .listened {
-        width: 35%;
+        width: 100%;
         height: 100%;
         display: flex;
         justify-content: right;
