implemented similar on the front TODO: CSS of the similar sections

--- a/frontend/src/app/album-page/components/album-page/album-page.component.scss
+++ b/frontend/src/app/album-page/components/album-page/album-page.component.scss
@@ -25,6 +25,13 @@
             color: inherit;
         }
     }
+    
+    .list-style1 {
+        overflow-x: auto;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+    }
 
     .banner-img {
         position: absolute;
