--- a/frontend/src/app/utility/components/artist/artist.component.scss
+++ b/frontend/src/app/utility/components/artist/artist.component.scss
@@ -24,6 +24,7 @@ a {
     background-color: #181818;
     border-radius: 7px;
     width: 240px;
+    color: white;
     transition: background-color 0.1s ease-in-out;
 
     .img-zone {
