--- a/frontend/src/app/album-page/components/album-page/album-page.component.html
+++ b/frontend/src/app/album-page/components/album-page/album-page.component.html
@@ -29,4 +29,11 @@
 			</div>
 		</div>
 	</div>
+
+    <div class="section">
+        <h2>Similar</h2>
+        <div class="list-style1">
+            <app-album *ngFor="let album of similarAlbums" [album]="album"></app-album>
+        </div>
+    </div>
 </div>
