--- a/frontend/src/app/artist-page/components/artist-page/artist-page.component.html
+++ b/frontend/src/app/artist-page/components/artist-page/artist-page.component.html
@@ -32,7 +32,7 @@
         <div class="section">
             <h2>Similar</h2>
             <div class="list-style1">
-                <app-album *ngFor="let album of artistAlbums" [album]="album"></app-album>
+                <app-artist *ngFor="let artist of similarArtists" [artist]="artist"></app-artist>
             </div>
         </div>
         
