added a column of popular song on homepage TODO: fix margins problems on repsonsive

--- a/frontend/src/app/home-page/home-page/home-page.component.html
+++ b/frontend/src/app/home-page/home-page/home-page.component.html
@@ -3,8 +3,8 @@
 		<div class="title">
 			<h2>Popular Songs</h2>
 		</div>
-		<div>
-			<app-song *ngFor="let song of popularSongs; let index = index" [song]="song" [index]="index+1"></app-song>
+		<div id="songs">
+			<app-song *ngFor="let song of popularSongs; let index = index" [song]="song"></app-song>
 		</div>
 	</div>
 	<div id="popular-albums" class="home-page-section">
