--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -5,8 +5,10 @@
 }
 
 html, body {
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
+	margin: 0;
+	padding: 0;
 }
 
 .interface {
@@ -63,6 +65,10 @@ html, body {
 	.interface {
 		grid-template-columns: 1fr;
 		grid-template-rows: 74vh 18vh 8vh;
+		height: 100%;
+		width: 100%;
+		margin: 0;
+		padding: 0;
 
 		grid-template-areas: 
 			"main"
@@ -72,5 +78,12 @@ html, body {
 
 	.arrows-nav {
 		left: 0;
+	}
+
+	html, body {
+		height: 100vh;
+		width: 100vw;
+		margin: 0;
+		padding: 0;
 	}
 }
