--- a/frontend/src/app/home-page/home-page/home-page.component.scss
+++ b/frontend/src/app/home-page/home-page/home-page.component.scss
@@ -15,6 +15,14 @@
 		font-size: 25px;
 	}
 
+	#popular-songs {
+
+		#songs {
+		    display: grid;
+		    grid-template-columns: 1fr 1fr;	
+		}	
+	}
+
 	#popular-albums, #popular-artists {
 		width: 100%;
 
@@ -29,4 +37,15 @@
 
 }
 
-@media only screen and (max-width: 800px) {}
+@media only screen and (max-width: 800px) {
+	#home-page {
+
+		#popular-songs {
+
+			#songs {
+			    display: grid;
+			    grid-template-columns: 1fr;	
+			}	
+		}
+	}
+}
