--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,6 +1,8 @@
 body {
 	margin: 0;
 	overflow: hidden;
+	height: 100vh;
+	width: 100vw;
     background-color: #181818;
 }
 
@@ -32,9 +34,10 @@ body {
 }
 
 @media screen and (max-width: 800px) {
-	html {
-		max-width: 100vw;
-		max-height: 100vh;
-		overflow: hidden;
+	html, body {
+		width: 100vw;
+		height: 100vh;
+		margin: 0;
+		padding: 0;
 	}
 }
