--- a/frontend/src/app/upload/components/multiselect/multiselect.component.scss
+++ b/frontend/src/app/upload/components/multiselect/multiselect.component.scss
@@ -1,9 +1,16 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
 .multi-select {
     position: relative;
     display: inline-block;
     border: 1px solid #ccc;
-    padding: 5px;
     cursor: pointer;
+    padding: 5px;
     width: 100%;
     height: 100%;
 
@@ -11,42 +18,45 @@
         display: flex;
         flex-wrap: wrap;
         gap: 5px; 
-        span {
-            background-color: #e0e0e0;
-            color: #333;
-            border-radius: 3px;
-            padding: 2px;
+
+        input {
+            border: none;
+            outline: none;
+            background-color: transparent;
+            color: white;
+        }
+
+        .selected-item {
+            span {
+                background-color: #e0e0e0;
+                color: #333;
+                border-radius: 3px;
+                padding: 2px;
+            }
+        }
+    }
+    .dropdown {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        z-index: 1;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        max-height: 200px;
+        overflow-y: auto;
+        width: 100%;
+
+        .option {
+            padding: 5px;
+            span {
+                display: block;
+                cursor: pointer;
+            }
+
+            span.selected {
+                background-color: #2196f3;
+                color: #fff;
+            }
         }
     }
 }
-
-  
-  .selected-items span {
-
-  }
-  
-  .dropdown {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 1;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    max-height: 200px;
-    overflow-y: auto;
-    width: 100%;
-  }
-  
-  .option {
-    padding: 5px;
-  }
-  
-  .option span {
-    display: block;
-    cursor: pointer;
-  }
-  
-  .option span.selected {
-    background-color: #2196f3;
-    color: #fff;
-  }
