--- a/frontend/src/app/upload/components/multiselect/multiselect.component.html
+++ b/frontend/src/app/upload/components/multiselect/multiselect.component.html
@@ -1,8 +1,8 @@
-<div class="multi-select" (click)="toggleDropdown()"> 
+<div class="multi-select" (click)="openDropDown()"> 
     <div class="selected-items">
         <div class="selected-item" *ngFor="let item of selectedItems; let index=index">
             <span>{{ item }}</span>
-            <span class="remove-selected-item" (click)="removeItem(index)">x</span>
+            <span class="remove-selected-item" (click)="toggleSelection(item)"> X </span>
         </div>
         <input type="text" placeholder="Select Genres" [(ngModel)]="searchText" (ngModelChange)="filterItems()">
     </div>
