--- a/frontend/src/app/upload/components/upload-song-card-generator/upload-song-card-generator.component.html
+++ b/frontend/src/app/upload/components/upload-song-card-generator/upload-song-card-generator.component.html
@@ -1,7 +1,5 @@
 <div class="upload-song-generator">
     <form [formGroup]="generateForm" onsubmit="return false">
-        <!--Song name input field-->
-        <input type="text" id="song-name" placeholder="Song Name" formControlName="title">
 
         <!--Song file input field-->
         <div class="song-input-container">
@@ -10,10 +8,12 @@
             </label>
             <input type="file" id="song-file" accept="audio/*" (change)="onFileSelected($event)">
         </div>
-        
+            
+        <!--Song name input field-->
+        <input type="text" id="song-name" placeholder="Song Name" formControlName="title">
     
         <!--Song genre selection -->
-        <app-multiselect></app-multiselect>
+        <app-multiselect [items]="genres" (onSelectionChange)="updateGenres($event)"></app-multiselect>
         <!--Song add button to album-->
         <button (click)="addSong()">
             <img src="../../../assets/plus-icon.svg" alt="Add Song">
