--- a/frontend/src/app/upload/components/upload-song-card/upload-song-card.component.scss
+++ b/frontend/src/app/upload/components/upload-song-card/upload-song-card.component.scss
@@ -18,6 +18,21 @@
         font-size: 1.5em;
     }
 
+    .song-genre {
+        display: flex;
+        align-items: center;
+        
+        gap: 10px;
+        color: white;
+        font-size: 1.2em;
+
+        span {
+            background-color: #333;
+            padding: 5px;
+            border-radius: 5px;
+        }
+    }
+
     .delete-icon-container {
         img {
             height: 5vh;
