--- a/frontend/src/app/album-page/components/album-page/album-page.component.scss
+++ b/frontend/src/app/album-page/components/album-page/album-page.component.scss
@@ -11,10 +11,11 @@
     grid-template-areas: 
         "header"
         "more";
-    grid-template-rows: 1fr 1.7fr;
+    grid-template-rows: 0.3fr 0.7fr;
+    grid-template-columns: 1fr;
 
     height: 100%;
-
+    width: 100%;
     //Reset style of a tag
     a {
         text-decoration: none;
@@ -25,31 +26,7 @@
             color: inherit;
         }
     }
-    
-    .list-style1 {
-        overflow-x: auto;
-        display: flex;
-        flex-direction: row;
-        gap: 10px;
-    }
 
-    .banner-img {
-        position: absolute;
-        top: -20%;
-        left: -40%;
-        width: 200%;
-        height: 120%;
-        overflow: hidden;
-
-        z-index: -100;
-
-        img {
-            width: 140%;
-            height: 140%;
-            object-fit: cover;
-            filter: brightness(0.5) blur(100px);
-        }
-    }
     .song-header {
         grid-area: header;
         display: flex;
@@ -137,6 +114,28 @@
                     height: 50px;
                     object-fit: cover;
                 }
+            }
+        }
+
+        .section {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            padding: 10px;
+            color: white;
+
+            max-width: 94vw;
+            h2 {
+                font-size: 2rem;
+                font-weight: bold;
+            }
+
+            .list-style1 {
+                overflow-x: scroll;
+                display: flex;
+                flex-direction: row;
+                gap: 10px;
+                width: 100%;
             }
         }
     }
