--- a/frontend/src/app/song-page/components/song-page/song-page.component.html
+++ b/frontend/src/app/song-page/components/song-page/song-page.component.html
@@ -29,7 +29,7 @@
         <div class="section">
             <h2>Similar</h2>
             <div class="list-style1">
-                <app-song *ngFor="let song of similarSongs" [song]="song"></app-song>
+                <app-song *ngFor="let song of similarSongs; let index=index" [song]="song" [index]="index+1"></app-song>
             </div>
         </div>
     </div>
