--- a/frontend/src/app/song-page/components/song-page/song-page.component.scss
+++ b/frontend/src/app/song-page/components/song-page/song-page.component.scss
@@ -130,6 +130,19 @@
                 }
             }
         }
+
+        .section {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            padding: 10px;
+            
+            h2 {
+                font-size: 2rem;
+                font-weight: bold;
+                color: white;
+            }
+        }
     }
 }
 
